--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
-# Compiled class file
-*.class
+# gradle
+.gradle
 
-# Log file
-*.log
+# idea
+*.ipr
+*.iws
+*.iml
+.idea
+*/build
+*/out
 
-# BlueJ files
-*.ctxt
+# OS
+.DS_Store
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*/generated
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# db
+*.db
