--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -15,8 +15,8 @@ eureka:
 zuul:
   routes:
     users:                          # 可以随便写，在zuul上面唯一即可；当这里的值 = service-id时，service-id可以不写。
-      path: /users/**               # 想要映射到的路径
-      serviceId: users              # Eureka中的serviceId
+      path: /user/**               # 想要映射到的路径
+      serviceId: users             # Eureka中的serviceId
 
 logging:
   level:
