--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: eureka         # 指定该Eureka实例的主机名
+    prefer-ip-address: true
   client:
     registerWithEureka: false
     fetchRegistry: false
