make zuul auto discover routes

--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -12,11 +12,11 @@ eureka:
     serviceUrl:
       defaultZone: http://127.0.0.1:8761/eureka/
 
-zuul:
-  routes:
-    users:                         # 可以随便写，在zuul上面唯一即可；当这里的值 = service-id时，service-id可以不写。
-      path: /user/**               # 想要映射到的路径
-      serviceId: user              # Eureka中的serviceId
+#zuul:
+#  routes:
+#    users:                         # 可以随便写，在zuul上面唯一即可；当这里的值 = service-id时，service-id可以不写。
+#      path: /user/**               # 想要映射到的路径
+#      serviceId: user              # Eureka中的serviceId
 
 ribbon:
   ReadTimeout: 20000               # 使用serviceId时，超时时间由ribbon决定
@@ -27,3 +27,9 @@ ribbon:
 #    org:
 #      springframework:
 #        cloud: debug
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'routes'
